# arrakis-command-nexus

./: .env.example  .gitattributes  .gitignore  .mailmap  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.basic.yml  docker-compose.cpupin.yml  docker-compose.dashboard.yml  docker-compose.full.yml  docker-compose.hostnet-4srv.yml  docker-compose.hostnet-all.yml  docker-compose.hostnet-lean.yml  docker-compose.hostnet.yml  docker-compose.standard-lean.yml  docker-compose.standard.yml  docker-compose.yml  dune  restore-compare.sh  restore-dune-missing-data.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml
config/: UserEngine.ini  UserGame.ini  director.ini  gateway.ini  rabbitmq-admin.conf  rabbitmq-enabled-plugins  rabbitmq-game.conf
dashboard/: nginx.conf
dashboard/backend/: .dockerignore  Dockerfile  __init__.py  main.py  requirements.txt
dashboard/backend/db/: database.py  models.py
dashboard/backend/middleware/: auth.py  rate_limit.py  redaction.py  request_logging.py  request_utils.py  security_headers.py
dashboard/backend/models/: allowlist.py  backup.py  config.py  discord.py  log.py  player.py  server.py  system.py
dashboard/backend/routers/: announce.py  audit.py  backups.py  characters.py  chat_guard.py  config.py  dashboard.py  discord.py  economy.py  events.py  logs.py  maps.py  players.py  restart_schedule.py  scheduled_announce.py  settings.py  status.py  system.py  updates.py  watchdog.py
dashboard/backend/scripts/: backup.sh  restore.sh
dashboard/backend/services/: announce_scheduler.py  announce_service.py  backup_scheduler.py  backup_service.py  cache.py  character_service.py  chat_guard_service.py  config_service.py  discord_service.py  docker_service.py  economy_service.py  env_file.py  event_bus.py  log_service.py  metrics_service.py  postgres_service.py  restart_scheduler.py  update_scheduler.py  update_service.py  watchdog_service.py
dashboard/frontend/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
dashboard/frontend/e2e/: dashboard.spec.ts
dashboard/frontend/src/: middleware.ts
dashboard/frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard/frontend/src/app/(dashboard)/: error.tsx  layout.tsx  page.tsx
dashboard/frontend/src/app/(dashboard)/announcements/: page.tsx
dashboard/frontend/src/app/(dashboard)/audit/: AuditClient.tsx  page.tsx
dashboard/frontend/src/app/(dashboard)/backups/: page.tsx
dashboard/frontend/src/app/(dashboard)/characters/: page.tsx
dashboard/frontend/src/app/(dashboard)/config/: page.tsx
dashboard/frontend/src/app/(dashboard)/discord/: page.tsx
dashboard/frontend/src/app/(dashboard)/economy/: page.tsx
dashboard/frontend/src/app/(dashboard)/game-settings/: page.tsx
dashboard/frontend/src/app/(dashboard)/incidents/: page.tsx
dashboard/frontend/src/app/(dashboard)/logs/: page.tsx
dashboard/frontend/src/app/(dashboard)/maps/: page.tsx
dashboard/frontend/src/app/(dashboard)/moderation/: page.tsx
dashboard/frontend/src/app/(dashboard)/players/: page.tsx
dashboard/frontend/src/app/(dashboard)/resources/: page.tsx
dashboard/frontend/src/app/(dashboard)/settings/: SettingsClient.tsx  page.tsx
dashboard/frontend/src/app/(dashboard)/system/: page.tsx
dashboard/frontend/src/app/(dashboard)/updates/: UpdatesClient.tsx  page.tsx
dashboard/frontend/src/app/(dashboard)/watchdog/: WatchdogClient.tsx  page.tsx
dashboard/frontend/src/app/api/events/stream/: route.ts
dashboard/frontend/src/app/config/: page.tsx
dashboard/frontend/src/app/discord/: page.tsx
dashboard/frontend/src/app/logs/: page.tsx
dashboard/frontend/src/app/maps/: page.tsx
dashboard/frontend/src/app/players/: page.tsx
dashboard/frontend/src/app/public/: layout.tsx  page.tsx
dashboard/frontend/src/app/system/: page.tsx
dashboard/frontend/src/components/: ApiError.tsx  BackupList.tsx  ConfigEditor.tsx  ConfirmDialog.tsx  DashboardShell.tsx  DiscordSettings.tsx  ErrorBoundary.tsx  HaggaBasinMap.tsx  LogStream.tsx  MapCard.tsx  MetricsChart.tsx  NetworkSparkline.tsx  PlayerHeatmap.tsx  PlayerTable.tsx  ResourceGauge.tsx  ShutdownPanel.tsx  Sidebar.tsx  Skeleton.tsx  StatusCard.tsx  ThemeToggle.tsx  ToastProvider.tsx  UptimeChart.tsx
dashboard/frontend/src/hooks/: swr-config.tsx  useApi.ts  useApiSWR.ts  useDashboardSSE.ts  useMapZoom.ts  useNavigationGuard.ts  usePolling.ts  useSSE.ts
dashboard/frontend/src/lib/: api.ts  player-map.ts  server-api.ts  types.ts  utils.ts
docs/: CLOUDFLARE_TUNNEL.md  CONFIGURATION.md  CONFIG_KEYS.md  DEEP_DESERT_KNOBS.md  DEPLOYMENT_NOTES.md  DESIGN.md  MAP_MANAGEMENT.md  MONITORING.md  NETWORKING.md  OPERATIONS.md  PROFILES.md  QUICKSTART.md  README.md  RESOURCE_RESPAWN_KNOBS.md  TROUBLESHOOTING.md
docs/diagrams/: architecture.excalidraw  dashboard-features.excalidraw
scripts/: backup.sh  bootstrap_db.py  check-steam-build.sh  collect-snapshot.sh  cpu-pin.sh  deploy.sh  dune-nic-irq-pin.sh  dune-nic-tuning.service  dune-stack.service  fix-perms.sh  gateway-patch.sh  generate-cpupin.sh  health-check.sh  host-tuning.sh  inventory-conflicts.sh  load-images.sh  partition_repair.py  preflight.sh  profile.sh  restore.sh  rmq-ghost-cleanup.sh  rmq_auth_shim.py  sanitize-check.sh  security-audit.sh  seed-gateway-neighbor.sh  seed-guard.sh  self-update.sh  setup.sh  shutdown-host.sh  smoke-test.sh  snapshot.sh  survival-pre-start.sh  update.sh
scripts/lib/: common.sh
snapshots/: .gitignore
vm/: README.md  build-vm.sh
