#!/usr/bin/env bash
# Dune Awakening Self-Hosted Server - CLI Tool
# Usage: dune <command> [options]

set -euo pipefail

SELF_PATH="${BASH_SOURCE[0]}"
while [[ -L "$SELF_PATH" ]]; do
  SELF_DIR="$(cd -P "$(dirname "$SELF_PATH")" && pwd)"
  SELF_PATH="$(readlink "$SELF_PATH")"
  [[ "$SELF_PATH" != /* ]] && SELF_PATH="${SELF_DIR}/${SELF_PATH}"
done
SELF_DIR="$(cd -P "$(dirname "$SELF_PATH")" && pwd)"
COMMON_PATH="$SELF_DIR/scripts/lib/common.sh"
if [[ ! -f "$COMMON_PATH" ]]; then
  SEARCH_DIR="$PWD"
  while [[ "$SEARCH_DIR" != "/" ]]; do
    if [[ -f "$SEARCH_DIR/scripts/lib/common.sh" ]]; then
      COMMON_PATH="$SEARCH_DIR/scripts/lib/common.sh"
      break
    fi
    SEARCH_DIR="$(dirname "$SEARCH_DIR")"
  done
fi
[[ -f "$COMMON_PATH" ]] || {
  printf 'Unable to locate scripts/lib/common.sh. Run dune from the project directory or use a symlink into the repository.\n' >&2
  exit 1
}
# shellcheck source=scripts/lib/common.sh
source "$COMMON_PATH"
init_dune_env "$SELF_PATH"

usage() {
  cat <<EOF
Usage: dune <command> [options]

Commands:
  deploy                  Interactive deployment wizard (ASCII art!)
  init                    Run first-time setup wizard
  start                   Run preflight checks and start the stack
  stop                    Stop the stack
  restart                 Restart the stack
  status                  Show container status, health, and ports
  snapshot [--json]       Capture point-in-time capacity and deploy state
  ready                   Show a quick readiness result
  logs [service] [--raw]  Tail compose logs with optional redaction bypass
  backup [--scope SCOPE]  Create a backup (full, config, db)
  restore <file>          Restore a backup file
  update                  Download and load new Funcom images
  self-update             Update the Dune management tooling
  install-service         Install/update the systemd boot service
  profile                 Show or switch deployment profiles
  doctor                  Run detailed health diagnostics
  dashboard               Open the dashboard in a browser
  preflight               Run quick pre-start validation
  shutdown-host           Graceful 2-phase host shutdown (warn → backup → stop → power off)
  config edit             Open config files with \$EDITOR
  help                    Show this help message
  version                 Show CLI version
EOF
}

redact_stream() {
  local -a secrets=()
  local secret

  if [[ -s "$SECRET_DIR/funcom-token.txt" ]]; then
    secrets+=("$(tr -d '\r\n' < "$SECRET_DIR/funcom-token.txt")")
  fi

  for secret in \
    "${FLS_SECRET:-}" \
    "${POSTGRES_SUPER_PASSWORD:-}" \
    "${POSTGRES_DUNE_PASSWORD:-}" \
    "${RABBITMQ_DEFAULT_PASS:-}" \
    "${DUNE_ADMIN_TOKEN:-}"; do
    [[ -n "$secret" ]] && secrets+=("$secret")
  done

  while IFS= read -r line; do
    for secret in "${secrets[@]}"; do
      [[ -n "$secret" ]] || continue
      line="${line//"$secret"/[REDACTED]}"
    done
    printf '%s\n' "$line"
  done
}

cmd_start() {
  require_compose_stack
  resolve_auto_addresses
  "$PROJECT_ROOT/scripts/preflight.sh"
  log_step "Starting the Dune stack using profile '$DEPLOYMENT_PROFILE'."
  run_compose up -d
  log_success 'Stack started.'

  # Run a lightweight health validation after startup so obvious regressions
  # surface immediately without waiting for an operator to run doctor.
  log_info 'Running post-start validation (waiting for services to initialise)...'
  sleep 30
  if "$PROJECT_ROOT/dune" ready >/dev/null 2>&1; then
    log_success 'Post-start validation passed.'
  else
    log_warn 'Post-start validation reported a non-ready stack. Check dune status and dune logs.'
  fi

  # Re-apply CPU pinning so container recreates never leave game maps
  # unpinned (UE5's single-threaded game tick will stall for seconds under
  # scheduler contention if maps share cores - see scripts/cpu-pin.sh).
  #
  # Prefer a host-installed dune-cpu-pin.service if one exists: it may
  # encode hand-tuned, per-host core assignments (from `cpu-pin.sh
  # --install` or manual tuning) that differ from - and supersede - the
  # generic auto-detected layout the repo script computes on the fly. Only
  # fall back to running the repo script directly when no such service is
  # installed on this host.
  if command -v systemctl >/dev/null 2>&1 && systemctl cat dune-cpu-pin.service >/dev/null 2>&1; then
    log_info 'Re-applying CPU core affinity via dune-cpu-pin.service...'
    sudo systemctl restart dune-cpu-pin.service 2>/dev/null || \
      log_warn 'CPU pinning service restart failed (non-fatal). Run: sudo systemctl restart dune-cpu-pin.service'
  elif [[ -x "$PROJECT_ROOT/scripts/cpu-pin.sh" ]]; then
    log_info 'Applying CPU core affinity...'
    bash "$PROJECT_ROOT/scripts/cpu-pin.sh" 2>/dev/null || \
      log_warn 'CPU pinning failed (non-fatal). Run: bash scripts/cpu-pin.sh'
  fi
}

# Resolve EXTERNAL_ADDRESS and GAME_RMQ_PUBLIC_HOST if set to "auto".
# The director and text-router are .NET binaries without in-container IP
# detection, so we resolve before docker compose reads .env.  Values are
# exported into the shell environment (which overrides .env for compose)
# but NOT written back — "auto" is preserved for future re-resolution
# on hosts with dynamic public IPs.
resolve_auto_addresses() {
  local ext_addr rmq_host resolved
  ext_addr="$(strip_wrapping_quotes "${EXTERNAL_ADDRESS:-auto}")"
  rmq_host="$(strip_wrapping_quotes "${GAME_RMQ_PUBLIC_HOST:-auto}")"

  if [[ "$ext_addr" == "auto" || -z "$ext_addr" ]]; then
    resolved="$(curl -fsS --connect-timeout 5 https://api.ipify.org 2>/dev/null \
      || curl -fsS --connect-timeout 5 https://ifconfig.me 2>/dev/null || true)"
    resolved="${resolved//[[:space:]]/}"
    if [[ -n "$resolved" && "$resolved" =~ ^[0-9A-Za-z.:_-]+$ ]]; then
      log_info "Resolved EXTERNAL_ADDRESS=auto -> $resolved"
      export EXTERNAL_ADDRESS="$resolved"
    else
      log_warn 'Could not detect public IP. EXTERNAL_ADDRESS remains "auto".'
      log_warn 'The server may not appear in the browser. Set a real IP in .env.'
    fi
  fi

  if [[ "$rmq_host" == "auto" || -z "$rmq_host" ]]; then
    resolved="${resolved:-$(strip_wrapping_quotes "${EXTERNAL_ADDRESS:-}")}"
    if [[ -n "$resolved" && "$resolved" != "auto" ]]; then
      log_info "Resolved GAME_RMQ_PUBLIC_HOST=auto -> $resolved"
      export GAME_RMQ_PUBLIC_HOST="$resolved"
    fi
  fi

  # Signal to load_env_file() that these vars were resolved at runtime
  # and must not be overwritten by .env values during preflight.
  export __DUNE_ADDR_RESOLVED=1
}

cmd_stop() {
  require_compose_stack
  log_step 'Stopping the Dune stack.'
  run_compose down
  log_success 'Stack stopped.'
}

cmd_restart() {
  cmd_stop
  cmd_start
}

cmd_status() {
  require_compose_stack
  if ! have_command python3; then
    run_compose ps
    return 0
  fi

  run_compose ps --format json | python3 -c 'import json, sys
items = json.load(sys.stdin)
if not items:
    print("No compose services are currently running.")
    raise SystemExit(0)
print(f"{'SERVICE':<24} {'STATE':<12} {'HEALTH':<12} PORTS")
for item in items:
    ports = []
    for publisher in item.get("Publishers") or []:
        host_ip = publisher.get("URL") or "0.0.0.0"
        pub = publisher.get("PublishedPort")
        target = publisher.get("TargetPort")
        proto = publisher.get("Protocol") or "tcp"
        if pub and target:
            ports.append(f"{host_ip}:{pub}->{target}/{proto}")
    print(f"{item.get('Service', ''):<24} {item.get('State', ''):<12} {item.get('Health', '') or '-':<12} {', '.join(ports) or '-'}")
'
}

cmd_ready() {
  require_compose_stack
  local result

  if ! have_command python3; then
    log_warn 'python3 not found; falling back to docker compose ps.'
    run_compose ps
    return 0
  fi

  result="$(run_compose ps --format json | python3 -c 'import json, sys
items = json.load(sys.stdin)
if not items:
    print("FAIL:No running services")
    raise SystemExit(0)
any_wait = False
for item in items:
    state = (item.get("State") or "").lower()
    health = (item.get("Health") or "").lower()
    if state not in {"running", "created"}:
        print(f"FAIL:{item.get('Service')} is {item.get('State')}")
        raise SystemExit(0)
    if health in {"unhealthy", "starting"}:
        any_wait = True
    elif health and health not in {"healthy", "running"}:
        any_wait = True
print("WAIT:Services are still warming up" if any_wait else "OK:All services look healthy")
')"

  # Look for critical errors that mean the stack is unhealthy despite container status
  if run_compose logs --no-color --tail=500 2>/dev/null | grep -qi "ArgumentNullException"; then
    result="FAIL:Director is crash-looping (ArgumentNullException)"
  elif run_compose logs --no-color --tail=500 2>/dev/null | grep -qi "cannot remove parameter defaults"; then
    result="FAIL:Database schema migration failed (cannot remove parameter defaults)"
  elif run_compose logs --no-color --tail=500 2>/dev/null | grep -qi "GamePhaseManager ensure failures"; then
    result="FAIL:GamePhaseManager ensure failures detected"
  fi

  case "$result" in
    OK:*)
      printf '%bOK%b %s\n' "$COLOR_GREEN" "$COLOR_RESET" "${result#OK:}"
      ;;
    WAIT:*)
      printf '%bWAIT%b %s\n' "$COLOR_YELLOW" "$COLOR_RESET" "${result#WAIT:}"
      ;;
    *)
      printf '%bFAIL%b %s\n' "$COLOR_RED" "$COLOR_RESET" "${result#FAIL:}"
      return 1
      ;;
  esac
}

cmd_logs() {
  require_compose_stack
  local raw='false'
  local service=''
  local arg
  local -a args=(logs --timestamps --no-color)

  for arg in "$@"; do
    case "$arg" in
      --raw)
        raw='true'
        ;;
      *)
        if [[ -z "$service" ]]; then
          service="$arg"
        else
          die "Unexpected argument for logs: $arg"
        fi
        ;;
    esac
  done

  [[ -n "$service" ]] && args+=("$service")

  if [[ "$raw" == 'true' ]]; then
    run_compose "${args[@]}"
  else
    run_compose "${args[@]}" | redact_stream
  fi
}

cmd_dashboard() {
  local url
  url="$(dashboard_url)"
  log_info "Dashboard URL: $url"
  if ! try_open_browser "$url"; then
    log_info 'No browser launcher found (headless host?). Open the URL above from a machine that can reach this server.'
  fi
}

cmd_config_edit() {
  local editor="${EDITOR:-vi}"
  local -a files=()

  [[ -f "$PROJECT_ROOT/.env" ]] && files+=("$PROJECT_ROOT/.env")
  if [[ -d "$CONFIG_DIR" ]]; then
    while IFS= read -r file_path; do
      files+=("$file_path")
    done < <(find "$CONFIG_DIR" -type f | sort)
  fi

  ((${#files[@]} > 0)) || die 'No editable config files were found.'
  exec "$editor" "${files[@]}"
}

cmd_help() {
  print_banner
  usage
}

cmd_version() {
  printf '%s\n' "$(version_string)"
}

cmd_install_service() {
  [[ "$(id -u)" -eq 0 ]] || die 'install-service must be run as root (sudo ./dune install-service).'

  local service_user service_group unit_path
  service_user="${DUNE_SERVICE_USER:-${SUDO_USER:-$(id -un)}}"
  service_group="${DUNE_SERVICE_GROUP:-$(id -gn "$service_user" 2>/dev/null || printf '%s' "$service_user")}"
  unit_path='/etc/systemd/system/dune-stack.service'

  [[ -x "$PROJECT_ROOT/dune" ]] || die "dune CLI not found or not executable at $PROJECT_ROOT/dune"

  cat > "$unit_path" <<UNIT
[Unit]
Description=Dune Awakening dedicated server stack (docker compose)
Requires=docker.service
After=docker.service network-online.target
Wants=network-online.target

[Service]
Type=oneshot
RemainAfterExit=yes
User=${service_user}
Group=${service_group}
WorkingDirectory=${PROJECT_ROOT}
ExecStart=${PROJECT_ROOT}/dune start
ExecStop=${PROJECT_ROOT}/dune stop
TimeoutStartSec=0

[Install]
WantedBy=multi-user.target
UNIT

  systemctl daemon-reload
  systemctl enable --now dune-stack.service
  log_success "Installed dune-stack.service for ${service_user}:${service_group} at ${PROJECT_ROOT}."
}

main() {
  local command="${1:-help}"
  shift || true

  case "$command" in
    init)
      exec "$PROJECT_ROOT/scripts/setup.sh" "$@"
      ;;
    deploy)
      exec "$PROJECT_ROOT/scripts/deploy.sh" "$@"
      ;;
    start)
      cmd_start "$@"
      ;;
    stop)
      cmd_stop "$@"
      ;;
    restart)
      cmd_restart "$@"
      ;;
    status)
      cmd_status "$@"
      ;;
    snapshot)
      exec "$PROJECT_ROOT/scripts/snapshot.sh" "$@"
      ;;
    rmq-ghost-cleanup|fix-p83)
      exec "$PROJECT_ROOT/scripts/rmq-ghost-cleanup.sh" "$@"
      ;;
    fix-perms)
      exec "$PROJECT_ROOT/scripts/fix-perms.sh" "$@"
      ;;
    ready)
      cmd_ready "$@"
      ;;
    logs)
      cmd_logs "$@"
      ;;
    backup)
      exec "$PROJECT_ROOT/scripts/backup.sh" "$@"
      ;;
    restore)
      exec "$PROJECT_ROOT/scripts/restore.sh" "$@"
      ;;
    update)
      exec "$PROJECT_ROOT/scripts/update.sh" "$@"
      ;;
    self-update)
      exec "$PROJECT_ROOT/scripts/self-update.sh" "$@"
      ;;
    install-service)
      cmd_install_service "$@"
      ;;
    profile)
      exec "$PROJECT_ROOT/scripts/profile.sh" "$@"
      ;;
    doctor)
      exec "$PROJECT_ROOT/scripts/health-check.sh" "$@"
      ;;
    dashboard)
      cmd_dashboard "$@"
      ;;
    preflight)
      exec "$PROJECT_ROOT/scripts/preflight.sh" "$@"
      ;;
    shutdown-host)
      exec "$PROJECT_ROOT/scripts/shutdown-host.sh" "$@"
      ;;
    config)
      case "${1:-}" in
        edit)
          shift
          cmd_config_edit "$@"
          ;;
        *)
          die "Unknown config subcommand: ${1:-<empty>}"
          ;;
      esac
      ;;
    help|-h|--help)
      cmd_help
      ;;
    version|--version)
      cmd_version
      ;;
    *)
      die "Unknown command: $command"
      ;;
  esac
}

main "$@"